# flxy-rs

./: COPYING  Cargo.toml  LICENSE-MIT  README.md
src/: constants.rs  lib.rs  search.rs
