[package]
name = "flxy"
version = "0.1.16"
authors = ["Jen-Chieh Shen <jenchieh94@gmail.com>"]
description = "Full-text searching and scoring of strings"
repository = "https://github.com/jcs090218/flxy"
homepage = "https://github.com/jcs090218/flxy"
readme = "README.md"
keywords = ["search", "fuzzy", "string"]
license = "MIT"
documentation = "https://docs.rs/flxy"

[dependencies]
unicode-normalization = "0.1.19"
